# CMakeStudy

./: README.md
Simple_CMake/: CMakeLists.txt  main.cpp
Simple_CMake/module1/: CMakeLists.txt  feature1.cpp
Simple_CMake/module2/: CMakeLists.txt  feature2.cpp
Simple_CMake/module3/: CMakeLists.txt  feature3.cpp
common/: README.md
enable_testing/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  math_functions.cpp  math_functions.h  test_math_functions.cpp
find_package/: README.md
find_package/Training_1/: CMakeLists.txt  README.md  setup.bat
find_package/Training_2/: CMakeLists.txt  README.md  main.cpp  setup.bat
